WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36007
[GStreamer] progressTimer never stopped after EOS
https://bugs.webkit.org/show_bug.cgi?id=36007
Summary
[GStreamer] progressTimer never stopped after EOS
Philippe Normand
Reported
2010-03-11 03:13:03 PST
The HTMLMediaElement progressTimer is not stopped after media playback ended. I think this is because we pause the pipeline in our didEnd() method, so the media element thinks the playback is paused, the timer never gets a chance to stop.
Attachments
don't mark the pipeline as paused on EOS
(2.18 KB, patch)
2010-03-11 05:19 PST
,
Philippe Normand
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2010-03-11 03:14:28 PST
It is easy to check with the launcher, activate Media logging with WEBKIT_DEBUG, watch a HTML5 video on youtube, wait the end and observe the progress timer still running, forever.
Philippe Normand
Comment 2
2010-03-11 05:19:34 PST
Created
attachment 50489
[details]
don't mark the pipeline as paused on EOS
Gustavo Noronha (kov)
Comment 3
2010-03-11 14:39:55 PST
Comment on
attachment 50489
[details]
don't mark the pipeline as paused on EOS Hrm. How about we enable the play/pause test somehow? That would rock =(. Sounds good to me for now, though.
Philippe Normand
Comment 4
2010-03-15 01:20:27 PDT
Landed in
r55987
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug